Correct position of the issue count icon on mobile res (#219)

--- a/src/main/resources/assets/styles/publish/issue-button.less
+++ b/src/main/resources/assets/styles/publish/issue-button.less
@@ -82,5 +82,9 @@
     span:first-child {
       display: none;
     }
+
+    .issue-count {
+      left: 26px;
+    }
   }
 }
